--- a/manifest.json
+++ b/manifest.json
@@ -59,7 +59,10 @@
 				"viewPath": "sap.ui.demo.nav.view",
 				"controlId": "app",
 				"controlAggregation": "pages",
-				"transition": "slide"
+				"transition": "slide",
+				"bypassed": {
+					"target": "notFound"
+				}
 			},
 			"routes": [{
 				"pattern": "",
@@ -70,6 +73,10 @@
 				"home": {
 				   "viewName": "Home",
 				   "viewLevel" : 1
+				},
+				"notFound": {
+					"viewName": "NotFound",
+					"transition": "show"
 				}
 			}
 		},
