Add resume view, navigate with flip transition

--- a/manifest.json
+++ b/manifest.json
@@ -78,6 +78,11 @@
 				"pattern": "employees/{employeeId}",
 				"name": "employee",
 				"target": "employee"
+			},
+			{
+				"pattern": "employees/{employeeId}/resume",
+				"name": "employeeResume",
+				"target": "employeeResume"
 			}],
 			"targets": {
 				"home": {
@@ -96,6 +101,11 @@
 				"employee": {
 					"viewName": "employees.Employee",
 					"viewLevel": 3
+				},
+				"employeeResume": {
+					"viewName": "employees.Resume",
+					"viewLevel": 4,
+					"transition": "flip"
 				}
 			}
 		},
