--- a/manifest.json
+++ b/manifest.json
@@ -80,7 +80,7 @@
 				"target": "employee"
 			},
 			{
-				"pattern": "employees/{employeeId}/resume",
+				"pattern": "employees/{employeeId}/resume:?query:",
 				"name": "employeeResume",
 				"target": "employeeResume"
 			}],
